tests/errors/tie-at-end.typ
#import "../../src/lib.typ": score
#score(time: "4/4", bars: ((notes: "C5:w ~"),))
